Cập nhật main...